Update ReadMe & Links

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "intellij-one-dark",
     "displayName": "Intellij One Dark",
-    "description": "Mix Intellij Theme And One Dark Syntax Scheme",
-    "version": "0.0.1",
+    "description": "A theme extension for Visual Studio Code based on One Dark theme and Darcula theme from Jetbrains IDE's,This is a mix of two diffrent theme.",
+    "version": "1.0.0",
     "publisher": "SonalSithara",
     "icon": "image/logo.png",
-    "repository": "https://github.com/Sonal23520/intellij-one-dark",
+    "repository": "https://github.com/sonal-sithara/intellij-one-dark",
     "engines": {
         "vscode": "^1.67.0"
     },
