--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "intellij-one-dark-theme",
+    "name": "intellij-one-dark",
     "displayName": "Intellij One Dark Theme",
     "description": "A theme extension for Visual Studio Code based on One Dark theme and Darcula theme from Jetbrains IDE's,This is a mix of two diffrent theme.",
     "version": "1.0.0",
